--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <version>1.4.197</version>
+		</dependency>	
+		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
 			<version>${javax.jpa.version}</version>
