--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,20 @@
 		<javax.jpa.version>1.0.2.Final</javax.jpa.version>
 		<javax.jta.version>1.1</javax.jta.version>
 		<hibernate.core.version>5.2.17.Final</hibernate.core.version>
+		<jboss.logging.version>3.3.1.Final</jboss.logging.version>
+		<com.classmate.version>0.8.0</com.classmate.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.fasterxml</groupId>
+			<artifactId>classmate</artifactId>
+			<version>${com.classmate.version}</version>
+		</dependency>	
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>${jboss.logging.version}</version>
+		</dependency>	
 		<dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
@@ -1304,6 +1316,16 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<includes>
+					<include>
+						**/*
+					</include>
+				</includes>
+			</testResource>
+		</testResources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
