--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -45,3 +45,4 @@ arca.context.massimo.numero.record=15
 
 #Configurazione path cache. Indica dove EHCache deve andare a scrivere la cache
 arca.context.cache.location=${catalina.home}/temp/arcacontext
+arca.context.produzione.minima=200
