--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -12,7 +12,7 @@ arca.context.hibernate.dialect=org.hibernate.dialect.H2Dialect
 arca.context.hibernate.show.sql=true
 arca.context.hibernate.format.sql=true
 arca.context.hibernate.generate.statistics=false
-arca.context.hibernate.ddl.auto=
+arca.context.hibernate.ddl.auto=create
 arca.context.hibernate.use.second.cache=true
 arca.context.hibernate.use.query.cache=true
 arca.context.hibernate.ehcache.region.factory.class=it.olegna.arca.context.hibernate.cache.config.JCacheRegionFactory
