--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -46,3 +46,7 @@ arca.context.massimo.numero.record=15
 #Configurazione path cache. Indica dove EHCache deve andare a scrivere la cache
 arca.context.cache.location=${catalina.home}/temp/arcacontext
 arca.context.produzione.minima=200
+
+
+#Controllo se attivare i campionati ogni all'una del mattino
+arca.context.attivazione.campionati.scheduler=0 0 01 * * ?
