--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -4,7 +4,7 @@ arca.context.db.jdbcUrl=jdbc:h2:./db/arca_repository
 arca.context.db.username=sa
 arca.context.db.password=
 arca.context.db.removeAbandoned=true
-arca.context.db.maxPoolSize=2
+arca.context.db.maxPoolSize=50
 arca.context.db.validationQuery=SELECT 1
 arca.context.db.maxIdleTime=60000
 #HIBERNATE
@@ -12,7 +12,7 @@ arca.context.hibernate.dialect=org.hibernate.dialect.H2Dialect
 arca.context.hibernate.show.sql=true
 arca.context.hibernate.format.sql=true
 arca.context.hibernate.generate.statistics=false
-arca.context.hibernate.ddl.auto=
+arca.context.hibernate.ddl.auto=${arca.context.filters.hibernate.ddl.auto}
 arca.context.hibernate.use.second.cache=true
 arca.context.hibernate.use.query.cache=true
 arca.context.hibernate.ehcache.region.factory.class=it.olegna.arca.context.hibernate.cache.config.JCacheRegionFactory
@@ -26,13 +26,13 @@ arca.context.max.file.dimension=5242880
 
 
 #Configurazione HTTP client
-arca.context.web.http.client.timeout=5000
-arca.context.web.http.client.proxyEnable=false
-arca.context.web.http.client.hostProxy=
-arca.context.web.http.client.portProxy=
-arca.context.web.http.client.usernameProxy=
-arca.context.web.http.client.passwordProxy=
-arca.context.web.http.client.urlNotProxy=
+arca.context.web.http.client.timeout=${arca.context.filters.web.http.client.timeout}
+arca.context.web.http.client.proxyEnable=${arca.context.filters.web.http.client.proxyEnable}
+arca.context.web.http.client.hostProxy=${arca.context.filters.web.http.client.hostProxy}
+arca.context.web.http.client.portProxy=${arca.context.filters.web.http.client.portProxy}
+arca.context.web.http.client.usernameProxy=${arca.context.filters.web.http.client.usernameProxy}
+arca.context.web.http.client.passwordProxy=${arca.context.filters.web.http.client.passwordProxy}
+arca.context.web.http.client.urlNotProxy=${arca.context.filters.web.http.client.urlNotProxy}
 
 #Configurazione cache
 #Dimensione cache
