--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 		<maven.test.skip>true</maven.test.skip>
 		<maven.test.failure.ignore>true</maven.test.failure.ignore>
 		<!-- Release dei framework utilizzati -->
-		<spring.framework.version>5.0.6.RELEASE</spring.framework.version>
-		<springframework.security.version>5.0.5.RELEASE</springframework.security.version>
+		<spring.framework.version>5.0.7.RELEASE</spring.framework.version>
+		<springframework.security.version>5.0.6.RELEASE</springframework.security.version>
 		<springframework.ws.core.version>3.0.1.RELEASE</springframework.ws.core.version>
 		<spring.ldap.version>2.3.2.RELEASE</spring.ldap.version>
 		<junit.version>4.12</junit.version>
@@ -1321,14 +1321,25 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<filters>
+			<filter>./filters/${build.profile.id}.properties</filter>
+		</filters>	
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>**/*.*</include>
+				</includes>
+			</resource>
+		</resources>		
 		<testResources>
 			<testResource>
 				<directory>src/test/resources</directory>
-				<includes>
-					<include>
-						**/*
-					</include>
-				</includes>
+				<excludes>
+					<exclude>**/*.*</exclude>
+				</excludes>
 			</testResource>
 		</testResources>
 		<plugins>
@@ -1370,6 +1381,10 @@
 				<version>3.0.2</version>
 				<configuration>
 					<useDefaultDelimiters>true</useDefaultDelimiters>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>jasper</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+					<encoding>${reporting.encoding}</encoding>					
 				</configuration>
 			</plugin>
 			<plugin>
@@ -1379,6 +1394,23 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>sviluppo</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<build.profile.id>sviluppo</build.profile.id>
+			</properties>
+		</profile>
+		<profile>
+			<id>produzione</id>
+			<properties>
+				<build.profile.id>produzione</build.profile.id>
+			</properties>
+		</profile>
+	</profiles>	
 	<reporting>
 		<plugins>
 			<plugin>
