--- a/filters/produzione.properties
+++ b/filters/produzione.properties
@@ -1,5 +1,5 @@
 #DDL che hibernate deve eseguire in partenza
-arca.context.filters.hibernate.ddl.auto=create
+arca.context.filters.hibernate.ddl.auto=update
 #Configurazione proxy
 arca.context.filters.web.http.client.timeout=5000
 arca.context.filters.web.http.client.proxyEnable=false
