--- a/filters/sviluppo.properties
+++ b/filters/sviluppo.properties
@@ -11,3 +11,20 @@ arca.context.filters.web.http.client.urlNotProxy=
 #Configurazione livello di logging
 arca.context.filters.logging.olegna.level=TRACE
 arca.context.filters.logging.root.level=INFO
+
+#PROPERTIES PER WRO
+#If true, it is DEVELOPMENT mode, by default this value is true
+wro.filter.debug=true
+# Default is true
+wro.filter.gzipEnabled=true
+wro.filter.jmxEnabled=true
+wro.filter.# MBean name to be used if JMX is enabled
+wro.filter.mbeanName=wro
+# Default is 0
+wro.filter.cacheUpdatePeriod=0
+# Default is 0
+wro.filter.modelUpdatePeriod=0
+# Default is false.
+wro.filter.disableCache=false
+# Default is UTF-8
+wro.filter.encoding=UTF-8
