--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -50,3 +50,13 @@ arca.context.produzione.minima=200
 
 #Controllo se attivare i campionati ogni all'una del mattino
 arca.context.attivazione.campionati.scheduler=0 0 01 * * ?
+
+#PROPERTIES PER WRO
+debug=${wro.filter.debug}
+gzipEnabled=${wro.filter.gzipEnabled}
+jmxEnabled=${wro.filter.jmxEnabled}
+mbeanName=${wro.filter.mbeanName}
+cacheUpdatePeriod=${wro.filter.cacheUpdatePeriod}
+modelUpdatePeriod=${wro.filter.modelUpdatePeriod}
+disableCache=${wro.filter.disableCache}
+encoding=${wro.filter.encoding}
