--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,33 @@
 		<hibernate.core.version>5.2.17.Final</hibernate.core.version>
 		<jboss.logging.version>3.3.1.Final</jboss.logging.version>
 		<com.classmate.version>0.8.0</com.classmate.version>
+		<ro.isdc.wro4j.version>1.8.0</ro.isdc.wro4j.version>
 	</properties>
 	<dependencies>
+		<dependency>
+		    <groupId>ro.isdc.wro4j</groupId>
+		    <artifactId>wro4j-core</artifactId>
+		    <version>${ro.isdc.wro4j.version}</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>org.apache.commons</groupId>
+		    		<artifactId>commons-lang3</artifactId>
+		    	</exclusion>
+		    	<exclusion>
+		    		<groupId>commons-io</groupId>
+		    		<artifactId>commons-io</artifactId>
+		    	</exclusion>
+		    	<exclusion>
+		    		<groupId>org.slf4j</groupId>
+		    		<artifactId>slf4j-api</artifactId>
+		    	</exclusion>		    			    	
+		    </exclusions>
+		</dependency>
+<!-- 		<dependency>
+		    <groupId>ro.isdc.wro4j</groupId>
+		    <artifactId>wro4j-extensions</artifactId>
+		    <version>${ro.isdc.wro4j.version}</version>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
     		<artifactId>commons-math3</artifactId>
